# advent-of-code-2025

./: .clang-format  CMakeLists.txt  utils.hpp
day01-part1/: main.cpp
day01-part2/: main.cpp
day02-part1/: main.cpp
day02-part2/: main.cpp
day03-part1/: main.cpp
day03-part2/: main.cpp
day04-part1/: main.cpp
day04-part2/: main.cpp
day04-part2-visualization/: main.cpp
day05-part1/: main.cpp
day05-part2/: main.cpp
day06-part1/: main.cpp
day06-part2/: main.cpp
day07-part1/: main.cpp
day07-part2/: main.cpp
day08-part1/: main.cpp
day08-part2/: main.cpp
day09-part1/: main.cpp
day09-part2/: main.cpp
include/: utils.hpp
