cmake_minimum_required(VERSION 3.25)
project(advent-of-code-2025)
set(CMAKE_CXX_STANDARD 23)

option(BENCHMARK "Enable benchmarking" OFF)
if (BENCHMARK)
    add_compile_definitions(BENCHMARK)
endif ()

if (WIN32)
    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        add_link_options(-static -stdlib=libc++ -lc++abi)
    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
        add_link_options(-static -static-libgcc -static-libstdc++)
        link_libraries(stdc++exp)
    endif ()
endif ()

include_directories(include)

add_executable(day01-part1 day01-part1/main.cpp)
add_executable(day01-part2 day01-part2/main.cpp)
add_executable(day02-part1 day02-part1/main.cpp)
add_executable(day02-part2 day02-part2/main.cpp)
add_executable(day03-part1 day03-part1/main.cpp)
